src/test/ui/allocator/not-an-allocator.rs
#[global_allocator]
static A: usize = 0;
//~^ the trait bound `usize:
//~| the trait bound `usize:
//~| the trait bound `usize:
//~| the trait bound `usize:

fn main() {}
